# atexit-breakage

./: CMakeLists.txt  README.md
src/: bar.c  main.c
